wip(pageLinks) : handle scroll to avoid overlap with fixed container

--- a/client/collab-ui/PageLinks/PageLinks.scss
+++ b/client/collab-ui/PageLinks/PageLinks.scss
@@ -2,7 +2,7 @@
   &__container {
     position: fixed;
     display: flex;
-    margin-top: rem-calc(92);
+    top: 400px;
     flex-flow: column;
   }
 
